fixed bug on mobile screen

--- a/src/components/Checkout/CheckoutForm.css
+++ b/src/components/Checkout/CheckoutForm.css
@@ -69,7 +69,7 @@
         padding: 0.3rem 0;
     }
     .checkout-button{
-        margin: 1rem 0 1rem 0;
+        margin: 1.2rem 0 1.2rem 0;
     }
 }
 @media (min-width:768px) and (max-width:992px){
@@ -77,6 +77,6 @@
         padding: 0.4rem 0;
     }
     .checkout-button{
-        margin: 1rem 0 1rem 0;
+        margin: 1.4rem 0 1.4rem 0;
     }
 }
